welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.code
def dogHouse(); {
     baisseBrosse(); 
     setCouleurBrosse(Color.red) ;
     for(i<-0 to 2) { avance(); }
	gauche();
	for(i<-0 to 2) { avance(); }
	gauche();
	for(i<-0 to 2) { avance(); }
}
gauche();
avance();
avance();
avance(); 
leveBrosse();
avance();
dogHouse();
recule();
recule();
recule();
leveBrosse();
recule();
dogHouse();
droite();
avance();
avance();
avance();
leveBrosse();
avance();
dogHouse();



